fix /users/{id}/record api
